--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <div class="mousemove1"></div>
+  <div class="mousemove2"></div>
+  <div class="mousemove3"></div>
   <nav>
     <h3>Helium</h3>
     <ul>
